Fix spinner z-index

--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -27,7 +27,7 @@
   background: $background-color;
   padding: 16px;
   box-sizing: border-box;
-  z-index: 900;
+  z-index: 700;
 
   h1 {
     margin-right: auto;
